trustfall_core/test_data/tests/valid_queries/property_len_transform_and_output.graphql.ron
TestGraphQLQuery (
    schema_name: "numbers",
    query: r#"
{
    Number(min: -1, max: 1) {
        vowelsInName
            @output
            @transform(op: "len")
            @output
    }
}"#,
    arguments: {},
)
