trustfall_core/test_data/tests/parse_errors/invalid_transform_supplying_argument_for_len_op.graphql.ron
TestGraphQLQuery (
    schema_name: "numbers",
    query: r#"
{
    Two {
        # The "len" transform operator does not accept arguments.
        vowelsInName @transform(op: "len", value: ["$arg"]) @output
    }
}"#,
    arguments: {
        "arg": Uint64(0),
    },
)
